--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,14 +9,16 @@
 <body>
   <header>
     <div class="col-xs-3">
-      <div class="circle">
-        <br />
-        Children's
-        <br />
-        Books
-        <br />
-        Rule!
-      </div>
+      <%= link_to root_path, :class => 'logo' do %>
+        <div class="circle">
+          <br />
+          Children's
+          <br />
+          Books
+          <br />
+          Rule
+        </div>
+      <% end %>
     </div>
     <div class="col-xs-4 slogan">
       Splurting out unsolicited advice about entrepreneurship since 2014
@@ -35,7 +37,7 @@
   <div class="footer">
     <div class="container">
      <div class="col-xs-6">
-        <%= link_to "This isn't enough, I need more", "#", :class => 'next-quote' %>
+        <%= link_to "This isn't enough, I need more", root_path, :class => 'next-quote' %>
 
       </div>
       
