--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,7 +2,7 @@
   <h1>About Splurty - aka the Genius Quotes Generator</h1>
 
   <p>
-    Splurty was built by <a target="_blank" href="http://github.com/MarcoMorawec"> me, Jenny P</a>! Just a gal who loves reading, and her favorite children's books will always have a special place in her heart. She constantly dreams of running running away with Stuart Little, and Peter Pan, Wilbur, Aslan, Matilda and that bowl of mush from Good Night Moon are a part of her #squadgoals. 
+    Splurty was built by <a target="_blank" href="http://github.com/MarcoMorawec"> me, Jenny P</a>! Just a gal who loves reading, and her favorite children's books will always have a special place in her heart. She constantly dreams of running away with Stuart Little. Peter Pan, Wilbur, Aslan, Matilda and that bowl of mush from Good Night Moon are a part of her #squadgoals. 
   </p>
   <br />
   
