--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -1,6 +1,6 @@
 <h2>
-  <span>SPLURTY / No. <%= @quote.id %></span>
-  Here's the <u>best life advice</u> you can get. Read a book!
+  <span>SPLURTY / <%= @quote.unique_tag %></span>
+  Here's the <u>best unsolicited startup advice</u> you can get!
 </h2>
 
 <h1><%= @quote.saying %></h1>
